samples/wig/should_pass/negative_scores.wig
variableStep chrom=chr1
1 -10
2 -5.0
3 10.2
10 -3.7
