samples/wig/should_fail/var_overshoot.wig
variableStep chrom=chr1 span=20
0 10
10 5
20 10
